--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(5731B519-03AD-4645-8C2F-BFCB0AAB97D8.jpg);
+background-image: url('./5731B619-03AD-4645-8C2F-BFCBBAA897D8.jpg');
     background-size: cover;
     background-position: center;
 }
